--- a/pages/team.html
+++ b/pages/team.html
@@ -41,89 +41,27 @@ tags: [About, Archive]
 
 <body>
 
-  <!-- Navigation -->
-  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container">
-      <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="index.html">SHD 2017</a>
-      </div>
-      <!-- Collect the nav links, forms, and other content for toggling -->
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav">
-
-          <li>
-            <a href="mentors.html">Projects and Mentors</a>
-          </li>
-          <li>
-            <a href="workshops.html">Workshops</a>
-          </li>
-          <li>
-            <a href="travel.html">Travel</a>
-          </li>
-          <li>
-            <a href="coc.html">Code of Conduct</a>
-          </li>
-          <li>
-            <a href="team.html">Team</a>
-          </li>
-          <li>
-            <a href="in_progress.html">Sponsors</a>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="#">Schedule
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="schedule.html">SHD Schedule</a></li>
-                <li><a href="scheduleworkshops.html">Workshops Schedule</a></li>
-              </ul>
-            </li>
-          <li>
-            <a href="http://sciencehackday.org/">Global SHD</a>
-          </li>
-          <li class="dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" href="http://sciencehackday.org/">Previous SHD
-              <span class="caret"></span></a>
-              <ul class="dropdown-menu">
-                <li><a href="2016/index.html">SHD 2016</a></li>
-              </ul>
-            </li>
-          </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-      </div>
-      <!-- /.container -->
-    </nav>
-
-    <!-- Page Content -->
-    <div class="container">
-
+  
       <div class="row">
         <div class="col-lg-12">
           <h2 class="page-header">Organizing Team</h2>
         </div>
          <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="2016/img/prabhusy.jpg" alt="">
+          <img class="img-circle img-responsive img-center" src="assets/img/prabhusy.jpg" alt="">
           <h3>Shrikrishna Prabhu
             <small></small>
           </h3>
           <p>Professor in Zoology, Environmentalist, Ex-Principal GSS College, Founder member 'Paryavarni' and Nature Lovers Club Belgaum</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="2016/img/gnovi.jpeg" alt=" ">
+          <img class="img-circle img-responsive img-center" src="assets/img/gnovi.jpeg" alt=" ">
           <h3>Praveen Patil
             <small>(Gnovi)</small>
           </h3>
           <p>Loves Physics, Python and fedora. FOSSASIA-GSoC Alumnus. GCI Mentor, Founder Society for Promotion of Open Science Hardware  <a href="http://gnovi.in" target="_blank"> gnovi.in</a></p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="2016/img/rahul.jpg" alt="">
+          <img class="img-circle img-responsive img-center" src="assets/img/rahul.jpg" alt="">
           <h3>Rahul Prabhukhanolkar
             <small>MRC</small>
           </h3>
