--- a/pages/team.html
+++ b/pages/team.html
@@ -47,7 +47,10 @@ tags: [About, Archive]
           <h2 class="page-header">Organizing Team</h2>
         </div>
          <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="assets/img/prabhusy.jpg" alt="">
+          <p>
+ <a href="http://sankalphospitality.in" target="_blank" ><img src="{{site.baseurl}}/assets/img/sankalpbhoomi.jpg" alt="Sankalpbhoomi"></a>
+</P> 
+          <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/prabhusy.jpg" alt="">
           <h3>Shrikrishna Prabhu
             <small></small>
           </h3>
@@ -61,7 +64,7 @@ tags: [About, Archive]
           <p>Loves Physics, Python and fedora. FOSSASIA-GSoC Alumnus. GCI Mentor, Founder Society for Promotion of Open Science Hardware  <a href="http://gnovi.in" target="_blank"> gnovi.in</a></p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="assets/img/rahul.jpg" alt="">
+          <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/rahul.jpg" alt="">
           <h3>Rahul Prabhukhanolkar
             <small>MRC</small>
           </h3>
