--- a/pages/team.html
+++ b/pages/team.html
@@ -46,6 +46,17 @@ tags: [About, Archive]
         <div class="col-lg-12">
           <h2 class="page-header">Organizing Team</h2>
         </div>
+       
+        </div>
+    <div class="col-lg-4 col-sm-6 text-center">
+        <img class="img-circle img-responsive" style="margin: 0 auto;" src="http://placehold.it/200x200"
+        alt="">
+        
+<h3>John Smith <small>Job Title</small></h3>
+
+        <p>What does this team member to? Keep it short! This is also a great spot
+            for social links!</p>
+    </div>
          <div class="col-lg-4 col-sm-6 text-center">
           <p>
  <a href="http://sankalphospitality.in" target="_blank" ><img src="{{site.baseurl}}/assets/img/sankalpbhoomi.jpg" alt="Sankalpbhoomi"></a>
