--- a/pages/team.html
+++ b/pages/team.html
@@ -5,44 +5,7 @@ permalink: /team/
 feature-img: "assets/img/pexels/circuit.jpeg"
 tags: [About, Archive]
 ---
- <!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Science Hack Day is a two-day event where anyone excited about making weird, silly or serious things with science comes together in the same physical space to see what they can prototype within 30 consecutive hours.">
-
-  <meta name="keywords" content="Science Hack, Science Hack India, Maker, Hacking, Science Workshops, Student Workshops, Hack Day Belgaum, Science Belagavi, SHD, Hackathon">
-  <meta name="author" content="">
-
-  <title>Science Hack Day India 2017</title>
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-  <!-- Bootstrap Core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
-
-  <!-- Custom CSS -->
-  <link href="css/business-frontpage.css" rel="stylesheet">
-  <link href="css/custom.css" rel="stylesheet">
-
-
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-  <!--[if lt IE 9]>
-  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-  <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-  <![endif]-->
-
-</head>
-
-<body>
-
-  
-      <div class="row">
+<div class="row">
         <div class="col-lg-12">
           <h2 class="page-header">Organizing Team</h2>
         </div>
@@ -68,7 +31,7 @@ tags: [About, Archive]
           <p>Professor in Zoology, Environmentalist, Ex-Principal GSS College, Founder member 'Paryavarni' and Nature Lovers Club Belgaum</p>
         </div>
         <div class="col-lg-4 col-sm-6 text-center">
-          <img class="img-circle img-responsive img-center" src="assets/img/gnovi.jpeg" alt=" ">
+          <img class="img-circle img-responsive img-center" src="{{site.baseurl}}/assets/img/gnovi.jpeg" alt=" ">
           <h3>Praveen Patil
             <small>(Gnovi)</small>
           </h3>
