--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -24,13 +24,12 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 		<ul><strong>Afternoon Session</strong></ul>
             	<span id="tab"><h4><strong></strong></h4></span>
 
-            	<ul>02:00 -  	Workshops begin </ul>
+            	<ul>02:00 -  	Workshops for Volunters and College Students begin </ul>
 		<ul>
 			<ul>
 				<ul>
-					<li>Workshop I   -	Soldering training to student volunteers</li> 
-					<li>Workshop II  - 	Python 101 for young scientists and Engineers</li>
-					<li>Workshop III - 	Python Powered Science Lab tools</li>
+					<li> Workshop   -	Soldering training to student volunteers</li> 
+					<li> Workshop   - 	Python 101 for young scientists and Engineers</li>
 				</ul>
 			</ul>
 		</ul>
@@ -63,13 +62,11 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 
             	<ul>11:00 -  	<span id="tab">Hacker participants form groups and move to hacker space, <strong>Hacking begins !</strong> </span></ul>
 		
-		<ul>11:00 -  	Workshops for students participants</ul> 
+		<ul>11:00 -  	Workshop for student participants (5th - 10th)</ul> 
 		<ul>
 			<ul>
 				<ul>
-					<li>Workshop IV   -	Science Toys for highschool kids</li> 
-					<li>Workshop V  - 	Soldering RBG LED Badge</li>
-					<li>Workshop VI - 	Microcontrollers for scientific data logging</li>
+					<li><strong>Workshop I   - Session I </strong>: Soldering RBG LED Badge	</li> 
 				</ul>
 			</ul>
 		</ul>		
@@ -82,6 +79,16 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
             	<span id="tab"><h4><strong></strong></h4></span>
 
             	<ul>02:00 -  <span id="tab">Hacking continues....</span></ul>
+	
+		<ul>02:00 -  <span id="tab">Workshops continue ...</span></ul>
+		<ul>
+			<ul>
+				<ul>
+					<li><strong>Workshop I  - Session II </strong>: Science Toys from Trash</li> 
+					<li><strong>Python Workshop - Session II </strong>: Science and Engineering Experiments with <strong>ExpEYES</strong></li>
+				</ul>
+			</ul>
+		</ul>		
 
 	    	<ul>05:00 -  <span id="tab">Chat with Chaat (tea and snacks at hackerspace)</span></ul>
 
@@ -106,6 +113,15 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 
             	<ul>09:30 -  	<span id="tab">Hacking Continues...</span></span></ul>
 
+		<ul>10:00 -  	Workshop for Highschool Students (7th - 10th)</ul> 
+		<ul>
+			<ul>
+				<ul>
+					<li><strong>Workshop II</strong>   Microcontroller Programming with Arduino</li> 
+				</ul>
+			</ul>
+		</ul>		
+
             	<ul>01:00 -  	<span id="tab">Lunch</span></ul>
 
             	<hr>
@@ -118,11 +134,11 @@ tags: [Schedule, Workshops, Python, ExpEYES, Scipy]
 
             	<ul>02:15 -  <span id="tab"><strong>Make it presentable</strong> Finishing touch- preparing presentations. Hack ideas/prototypes/demo setups moved to main hall for display</span></ul>
 
-            	<ul>03:15 -  <span id="tab">Students interact with hackers.  People/students see the hacks and vote (Parents of registered students are invited at 3.00pm) </span></ul>
+            	<ul>02:30 -  <span id="tab">Science Demos  </span></ul>
 
-            	<ul>04:00 -  <span id="tab">Snack time... People visit the exhibit area.</span></ul>
+            	<ul>04:00 -  <span id="tab">Students, parents and Judges interact with hackers see the hacks/installations.</span></ul>
 
-		<ul>04:30 -  <span id="tab"><strong>Valedictary function</strong>. Winning teams announced & given SHD India medals</span></ul>
+		<ul>04:30 -  <span id="tab"><strong>Valedictary function</strong>. Teams present their hacks, Prople vote Popular Hack/People's Choice Award, award Winning teams announced & given SHD India medals</span></ul>
 
             	<ul>07:30 -  <span id="tab">Chat with Chaat. Gappa tappa, Ideas exchange, What next? </span></ul>
 
